f.txt
neuron.cpp: In member function ‘void Neuron::setVal(const double&)’:
neuron.cpp:11:7: error: assignment of read-only reference ‘val’
   val = val;
       ^
